# LOL-Desktop-Assistant

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/skills/karpathy-codex-workflow/: SKILL.md
.agents/skills/karpathy-codex-workflow/agents/: openai.yaml
crates/adapters/: Cargo.toml
crates/adapters/src/: constants.rs  lib.rs
crates/application/: Cargo.toml
crates/application/src/: constants.rs  lib.rs
crates/domain/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: constants.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_state_foundation.sql  0003_player_notes.sql  0004_ranked_champion_cache.sql  0005_lobby_automation_settings.sql  0006_language_preference.sql
crates/storage/src/: constants.rs  lib.rs
data/ranked-champions/: README.md  latest.json  schema.json
docs/: auto-accept-architecture.md
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/backend/: activity.ts  commands.ts  dataTools.ts  events.ts  healthcheck.ts  leagueClient.ts  settings.ts  system.ts  types.ts
src/components/: ParticipantProfilePanel.tsx  PostMatchAnalysis.tsx
src/components/common/: ChampionImage.tsx  Metric.tsx  RefreshIcon.tsx  ResultBadge.tsx  StatePanel.tsx  index.ts
src/pages/: Activity.tsx  Dashboard.tsx  History.tsx  Matches.tsx  ParticipantProfileWindow.tsx  Profile.tsx  RankedChampions.tsx  SelfHistoryOverlay.tsx  Settings.tsx
src/state/: AppStateProvider.tsx
src/utils/: formatting.ts
src/utils/__tests__/: formatting.test.ts
src/windows/: participantProfileWindow.ts  selfHistoryOverlayWindow.ts
tools/ranked-data/: validate-ranked-data.mjs
