[workspace]
members = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
adapters = { path = "crates/adapters" }
application = { path = "crates/application" }
domain = { path = "crates/domain" }
platform = { path = "crates/platform" }
storage = { path = "crates/storage" }

rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = "2.10.3"
tauri-build = "2.5.6"
