[workspace]
members = [
  "src-tauri",
  "crates/adapters",
  "crates/application",
  "crates/domain",
  "crates/platform",
  "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
adapters = { path = "crates/adapters" }
application = { path = "crates/application" }
domain = { path = "crates/domain" }
platform = { path = "crates/platform" }
storage = { path = "crates/storage" }

rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-global-shortcut = "2.3.1"
rayon = "1.10"
base64 = "0.22.1"
futures-util = "0.3.31"
native-tls = "0.2.14"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.18"
