[package]
name = "lol-desktop-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
domain.workspace = true
platform.workspace = true
tauri.workspace = true
tauri-plugin-global-shortcut.workspace = true
