[package]
name = "adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
application.workspace = true
base64.workspace = true
domain.workspace = true
futures-util.workspace = true
native-tls.workspace = true
reqwest.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
