[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adapters.workspace = true
application.workspace = true
domain.workspace = true
serde.workspace = true
storage.workspace = true
tauri.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true
